fix alignment of .help-container when feature flag is off

--- a/client/assets/styles/scss/deprecated/isolation-ui.scss
+++ b/client/assets/styles/scss/deprecated/isolation-ui.scss
@@ -189,5 +189,9 @@
   }
 }
 
+.help-container.deprecated {
+  left: 15px;
+}
+
 //- deprecated file, delete with isolationUI feature flag
 //- ************************
